test/Fail/Issue5251-2.agda
{-# OPTIONS --erasure #-}

_ : (@0 Set → Set) → (@ω Set → Set)
_ = λ f → f
